# Case_PraticoAutoU

./: README.md
Arquivos_Teste_Email/: Texto_teste1.txt  Texto_teste2.txt
CasePraticoAutoU/: README.md  main.py  pyproject.toml  replit.md  requirements.txt
CasePraticoAutoU/static/: script.js  style.css
CasePraticoAutoU/templates/: index.html
